# jellyfin

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflows/: build.yml
docs/: deploy-lxc.md
examples/: docker-compose.basic.yml  docker-compose.dockge.yml  docker-compose.nvidia.yml  docker-compose.tmpfs-transcode.yml  docker-compose.upstream.yml  docker-compose.yml
examples/lxc/: 113-jellyfin.conf
lxc/: jellyfin.conf.example  provision.sh
lxc/ubuntu-vaapi-shim/: README.md
scripts/: backup.sh  configure.sh  entrypoint.sh  install.sh  restore.sh
src/: abi_export.rs  diag.rs  lib.rs  lifecycle.rs  main.rs  storage.rs  tools.rs
tests/: integration.rs
