[package]
name = "jellyfin"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Jellyfin with GPU hardware transcoding — orca lifecycle/diagnostics"
build = "build.rs"

[package.metadata.orca]
category = "media"

[lib]
name = "jellyfin"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib. The plugin ships as the `[[bin]]` below — a dynamic
# subprocess the loader spawns, not a dlopened cdylib.
crate-type = ["rlib"]

[[bin]]
name = "jellyfin"
path = "src/main.rs"

# Jellyfin media-server plugin. Typed client codegenned by progenitor from
# the vendored upstream spec (`specs/jellyfin-openapi-12.0.0.json`, OpenAPI
# 3.0.4, MIT). The upstream spec is ~294 paths; `build.rs` prunes it to the
# handful this plugin drives (System/Info, System/Restart, Sessions,
# Library/VirtualFolders) plus their transitive schema closure before codegen
# — see `plugin_toolkit_build::openapi::generate_one`.
#
# Update the spec by overwriting `specs/jellyfin-openapi-12.0.0.json`.

[dependencies]
# The SOLE orca dependency. Every external crate the plugin needs — serde,
# serde_json, schemars, clap, thiserror, chrono, uuid, reqwest, and the whole
# progenitor runtime (progenitor-client / regress / bytes / futures-core) — is
# reached through `plugin_toolkit::*` / its prelude, injected by
# `#[plugin_struct]`/`#[orca_tool]`, or rewritten into the generated `api`
# module by the build-time codegen (which redirects serde::/reqwest::/etc. to
# ::plugin_toolkit::* and anchors the generated serde derives). The plugin
# source names no external crate.
#
# Pinned to the orca rc tag that carries the plugin-toolkit surface. REQUIRES an
# rc >= the one with the OpenAPI codegen path-rewrite + the progenitor-runtime
# re-exports. Until that rc is cut, the committed `[patch]` in
# `.cargo/config.toml` resolves this to the local in-tree toolkit at ../orca.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

[dev-dependencies]
# Dev-only: the integration-test crate (a separate crate from the lib) reaches
# serde_json's `json!` for mock bodies through the toolkit, same as the lib's
# in-crate tests. Not a runtime dep.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[build-dependencies]
plugin-toolkit-build = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
